[gd_scene load_steps=26 format=3 uid="uid://c74bgk5t3i073"]

[ext_resource type="Script" path="res://Game/game.gd" id="1_c1frk"]
[ext_resource type="PackedScene" uid="uid://d1iu4qq6fy87d" path="res://Player/player.tscn" id="2_hrwcn"]
[ext_resource type="PackedScene" uid="uid://cuxpk5jiyb5la" path="res://Shapka_stage_nomer/shapka_stage_nomer.tscn" id="3_tigl6"]
[ext_resource type="PackedScene" uid="uid://dsyrsfpln7x2a" path="res://Chislo_gizney/chislo_gizney.tscn" id="4_e3iko"]
[ext_resource type="AudioStream" uid="uid://dqbiq4l5iglwp" path="res://Game/3 - Track 3.mp3" id="5_uh08g"]
[ext_resource type="AudioStream" uid="uid://d2h6o7tm3j4o7" path="res://Game/4 - Track 4.mp3" id="6_aga60"]
[ext_resource type="Texture2D" uid="uid://bwkcj746u1png" path="res://Game/tile_gray_field.png" id="6_u5mt2"]
[ext_resource type="Texture2D" uid="uid://bmgldn6jrbjud" path="res://Game/tile_green_field.png" id="7_5rnrf"]
[ext_resource type="PackedScene" uid="uid://bvacrkmksxno3" path="res://Vorota/vorota.tscn" id="7_i7t04"]
[ext_resource type="Texture2D" uid="uid://bg2d7yvqa7el6" path="res://Game/tile_block.png" id="7_v1gvt"]
[ext_resource type="PackedScene" uid="uid://b030vlsjldfl3" path="res://Player_2/player_2.tscn" id="8_b5yar"]
[ext_resource type="PackedScene" uid="uid://bdfh7863iooh" path="res://Items/Item_lazer/item_lazer.tscn" id="8_kb0bh"]
[ext_resource type="PackedScene" uid="uid://dskfrocvgso1b" path="res://Timer_label/timer_label.tscn" id="9_lbggg"]
[ext_resource type="PackedScene" uid="uid://dooh8axm0x88g" path="res://Items/Item_b/item_b.tscn" id="12_3ho0m"]
[ext_resource type="PackedScene" uid="uid://cygglfppscm2l" path="res://Items/Item_speed/item_speed.tscn" id="13_03m6e"]
[ext_resource type="PackedScene" uid="uid://xe11fmwijvcg" path="res://Items/Item_skvoz_steni/item_skvoz_steni.tscn" id="14_oke48"]
[ext_resource type="PackedScene" uid="uid://k8v6h58r4bix" path="res://Items/Item_flamepass/item_flamepass.tscn" id="15_3bhd2"]
[ext_resource type="PackedScene" uid="uid://oius0v23rhgm" path="res://Items/Item_knopka/item_knopka.tscn" id="15_kmpu5"]
[ext_resource type="Texture2D" uid="uid://d1r3um1cnwstf" path="res://Game/ButtonMenu.png" id="22_gv2r4"]
[ext_resource type="Texture2D" uid="uid://cmp7eut7b333h" path="res://Game/ButtonMenuPress.png" id="23_w431k"]
[ext_resource type="Texture2D" uid="uid://bdptxodjvergo" path="res://Game/Menu.png" id="24_158xk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6xlvd"]
texture = ExtResource("6_u5mt2")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tnbu8"]
texture = ExtResource("7_v1gvt")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7lr16"]
texture = ExtResource("7_5rnrf")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_gabsd"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 64
physics_layer_0/collision_mask = 128
sources/0 = SubResource("TileSetAtlasSource_6xlvd")
sources/1 = SubResource("TileSetAtlasSource_tnbu8")
sources/2 = SubResource("TileSetAtlasSource_7lr16")

[node name="Game" type="Node2D"]
light_mask = 5
visibility_layer = 9
script = ExtResource("1_c1frk")

[node name="TileMap" type="TileMap" parent="."]
light_mask = 5
visibility_layer = 9
tile_set = SubResource("TileSet_gabsd")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 262146, 1, 0, 393218, 1, 0, 524290, 1, 0, 655362, 1, 0, 851968, 1, 0, 786432, 1, 0, 720896, 1, 0, 655360, 1, 0, 589824, 1, 0, 524288, 1, 0, 458752, 1, 0, 262148, 1, 0, 262150, 1, 0, 262152, 1, 0, 262154, 1, 0, 262156, 1, 0, 262158, 1, 0, 262160, 1, 0, 262162, 1, 0, 786434, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 393220, 1, 0, 393222, 1, 0, 393224, 1, 0, 393226, 1, 0, 393228, 1, 0, 393230, 1, 0, 393232, 1, 0, 393234, 1, 0, 524306, 1, 0, 655378, 1, 0, 786450, 1, 0, 786448, 1, 0, 786446, 1, 0, 786444, 1, 0, 786442, 1, 0, 786440, 1, 0, 786438, 1, 0, 786436, 1, 0, 655364, 1, 0, 655366, 1, 0, 655368, 1, 0, 655370, 1, 0, 655372, 1, 0, 655374, 1, 0, 655376, 1, 0, 524304, 1, 0, 524302, 1, 0, 524300, 1, 0, 524298, 1, 0, 524296, 1, 0, 524294, 1, 0, 524292, 1, 0, 327683, 2, 0, 262147, 2, 0, 196611, 2, 0, 196610, 2, 0, 196609, 2, 0, 262145, 2, 0, 327681, 2, 0, 327682, 2, 0, 196612, 2, 0, 196613, 2, 0, 262149, 2, 0, 327685, 2, 0, 327684, 2, 0, 393217, 2, 0, 393219, 2, 0, 393221, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 262151, 2, 0, 262153, 2, 0, 262155, 2, 0, 262157, 2, 0, 262159, 2, 0, 262161, 2, 0, 262163, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 393223, 2, 0, 393225, 2, 0, 393227, 2, 0, 393229, 2, 0, 393231, 2, 0, 393233, 2, 0, 393235, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 524289, 2, 0, 524291, 2, 0, 524293, 2, 0, 524295, 2, 0, 524297, 2, 0, 524299, 2, 0, 524301, 2, 0, 524303, 2, 0, 524305, 2, 0, 524307, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 655361, 2, 0, 655363, 2, 0, 655365, 2, 0, 655367, 2, 0, 655369, 2, 0, 655371, 2, 0, 655373, 2, 0, 655375, 2, 0, 655377, 2, 0, 655379, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 786433, 2, 0, 786435, 2, 0, 786437, 2, 0, 786439, 2, 0, 786441, 2, 0, 786443, 2, 0, 786445, 2, 0, 786447, 2, 0, 786449, 2, 0, 786451, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 851998, 1, 0, 786462, 1, 0, 720926, 1, 0, 655390, 1, 0, 589854, 1, 0, 524318, 1, 0, 458782, 1, 0, 393246, 1, 0, 327710, 1, 0, 262174, 1, 0, 196638, 1, 0, 131102, 1, 0, 131101, 1, 0, 131100, 1, 0, 131099, 1, 0, 131098, 1, 0, 131097, 1, 0, 131096, 1, 0, 131095, 1, 0, 131094, 1, 0, 131093, 1, 0, 262164, 1, 0, 262166, 1, 0, 262168, 1, 0, 262170, 1, 0, 262172, 1, 0, 393236, 1, 0, 393238, 1, 0, 393240, 1, 0, 393242, 1, 0, 393244, 1, 0, 524308, 1, 0, 524310, 1, 0, 524312, 1, 0, 524314, 1, 0, 524316, 1, 0, 655380, 1, 0, 655382, 1, 0, 655384, 1, 0, 655386, 1, 0, 655388, 1, 0, 786452, 1, 0, 786454, 1, 0, 786456, 1, 0, 786458, 1, 0, 786460, 1, 0, 720916, 2, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 2, 0, 720925, 2, 0, 786453, 2, 0, 786455, 2, 0, 786457, 2, 0, 786459, 2, 0, 786461, 2, 0, 655381, 2, 0, 655383, 2, 0, 655385, 2, 0, 655387, 2, 0, 655389, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589851, 2, 0, 589852, 2, 0, 589853, 2, 0, 524309, 2, 0, 524311, 2, 0, 524313, 2, 0, 524315, 2, 0, 524317, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 2, 0, 458777, 2, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 0, 393237, 2, 0, 393239, 2, 0, 393241, 2, 0, 393243, 2, 0, 393245, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327706, 2, 0, 327707, 2, 0, 327708, 2, 0, 327709, 2, 0, 262165, 2, 0, 262167, 2, 0, 262169, 2, 0, 262171, 2, 0, 262173, 2, 0, 196628, 2, 0, 196629, 2, 0, 196630, 2, 0, 196631, 2, 0, 196632, 2, 0, 196633, 2, 0, 196634, 2, 0, 196635, 2, 0, 196636, 2, 0, 196637, 2, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_uh08g")
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_aga60")

[node name="Mobs" type="Node2D" parent="."]

[node name="player" parent="." instance=ExtResource("2_hrwcn")]
position = Vector2(68, 169)

[node name="player_2" parent="." instance=ExtResource("8_b5yar")]
position = Vector2(105, 169)

[node name="bloki_kirpichi" type="Node2D" parent="."]

[node name="vorota" parent="." instance=ExtResource("7_i7t04")]
position = Vector2(120, -24)

[node name="item_lazer" parent="." instance=ExtResource("8_kb0bh")]
position = Vector2(24, -24)

[node name="item_b" parent="." instance=ExtResource("12_3ho0m")]
position = Vector2(72, -24)

[node name="item_speed" parent="." instance=ExtResource("13_03m6e")]
position = Vector2(168, -24)

[node name="item_skvoz_steni" parent="." instance=ExtResource("14_oke48")]
position = Vector2(216, -24)

[node name="item_knopka" parent="." instance=ExtResource("15_kmpu5")]
position = Vector2(265, -24)

[node name="item_flamepass" parent="." instance=ExtResource("15_3bhd2")]
position = Vector2(313, -24)

[node name="Timer" type="Timer" parent="."]
wait_time = 200.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="timer_label" parent="CanvasLayer" instance=ExtResource("9_lbggg")]
offset_left = 24.0
offset_top = 24.0
offset_right = 192.0
offset_bottom = 72.0

[node name="shapka_stage_nomer" parent="CanvasLayer" instance=ExtResource("3_tigl6")]
offset_left = 961.0
offset_right = 1088.0
offset_bottom = 45.0

[node name="chislo_gizney" parent="CanvasLayer" instance=ExtResource("4_e3iko")]
offset_left = 961.0
offset_top = 45.0
offset_right = 1150.0
offset_bottom = 90.0

[node name="ochki" type="Label" parent="CanvasLayer"]
z_index = 3
offset_left = 434.0
offset_top = 24.0
offset_right = 701.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="ButtonMenu" type="TouchScreenButton" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 6
position = Vector2(1165, 6)
scale = Vector2(0.95, 0.95)
texture_normal = ExtResource("22_gv2r4")
texture_pressed = ExtResource("23_w431k")

[node name="PauseMenu" type="Panel" parent="CanvasLayer"]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -191.0
offset_right = 218.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/PauseMenu"]
scale = Vector2(4.71111, 5.05556)
texture = ExtResource("24_158xk")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -76.5
offset_right = 97.0
offset_bottom = 203.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="Menu" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Menu"

[node name="Quit" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = 13.0
offset_right = 89.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Menu"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/ButtonMenu" to="." method="_on_button_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
